# macrofair

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  api_spec.md  architecture.md  data_model.md  demo_submission_plan.md  frontend_design.md  modeling_plan.md  package-lock.json  package.json  playwright.config.ts  project_brief.md  project_name.md  prompt.md  pyproject.toml  repo_analysis.md  submission_checklist.md  tasks.md  testing_strategy.md
.github/workflows/: ci.yml
apps/api/: __init__.py  main.py
apps/web/: package.json  tailwind.config.ts  vitest.config.ts
artifacts/evaluation/: backtest_summary.json  calibration_curve_points.json  calibration_metrics.json  explanation_examples.json  findings_index.json  flagship_category_breakdown.csv  flagship_dislocation_contributions.csv  flagship_finding.json  flagship_persistence.csv  flagship_persistence.json  sample_ranked_snapshot.json  secondary_finding.csv  secondary_finding.json  third_finding_snapshot_category_shares.csv  zerve_submission_package.json
data/fixtures/: fred_series.json  histories.json  markets.json  metadata.json  snapshot_window.json
docs/: README.md  current_state_audit.md  demo_script_3min.md  findings.md  methodology.md  milestones.md  openapi.json  submission_summary_300w.md  zerve_integration.md
scripts/: create_proof_pack.sh  export_calibration_artifacts.py  export_flagship_finding.py  export_longitudinal_findings.py  export_openapi.py  export_ranked_snapshot.py  export_zerve_submission_package.py  verify_zerve_live.py
src/macrofair/: __init__.py  (+4 more)
tests/: conftest.py
(+170 files in other folders)
