[project]
name = "macrofair-api"
version = "0.1.0"
description = "MacroFair FastAPI service and deterministic demo pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "httpx>=0.27.0,<1.0.0",
  "ruff>=0.11.0,<1.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
addopts = "--disable-warnings"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E402", "E501"]
